--- a/20250810/assets/css/page.css
+++ b/20250810/assets/css/page.css
@@ -1,4 +1,238 @@
 @charset "UTF-8";
+
+/* 개인정보 처리방침 폼 스타일 */
+.input-text.disabled,
+.textarea.disabled,
+.input-file.disabled {
+  background-color: #f5f5f5;
+  color: #999;
+  cursor: not-allowed;
+}
+
+/* CO04 인사말 페이지 본문 스타일 */
+.img-text__title {
+  width: 249px;
+  height: 55px;
+  margin: 0 337px 30px 0;
+  font-family: Pretendard;
+  font-size: 46px;
+  font-weight: bold;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.48;
+  letter-spacing: normal;
+  text-align: left;
+  color: #111;
+}
+
+/* 본문 텍스트 스타일들 */
+.img-text__text .\\-:nth-of-type(1) {
+  width: 569px;
+  height: 88px;
+  margin: 30px 17px 20px 0;
+  font-family: Pretendard;
+  font-size: 20px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.6;
+  letter-spacing: normal;
+  text-align: left;
+  color: #111;
+}
+
+.img-text__text .\\-:nth-of-type(2) {
+  width: 564px;
+  height: 88px;
+  margin: 20px 22px 20px 0;
+  font-family: Pretendard;
+  font-size: 20px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.6;
+  letter-spacing: normal;
+  text-align: left;
+  color: #333;
+}
+
+.img-text__text .\\-:nth-of-type(3) {
+  width: 581px;
+  height: 88px;
+  margin: 20px 5px 20px 0;
+  font-family: Pretendard;
+  font-size: 20px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.6;
+  letter-spacing: normal;
+  text-align: left;
+  color: #333;
+}
+
+.img-text__text .\\-:nth-of-type(4) {
+  width: 574px;
+  height: 56px;
+  margin: 20px 12px 20px 0;
+  font-family: Pretendard;
+  font-size: 20px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.6;
+  letter-spacing: normal;
+  text-align: left;
+  color: #333;
+}
+
+.img-text__text .\\-:nth-of-type(5) {
+  width: 586px;
+  height: 88px;
+  margin: 20px 0;
+  font-family: Pretendard;
+  font-size: 20px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.6;
+  letter-spacing: normal;
+  text-align: left;
+  color: #333;
+}
+
+.img-text__text .\\-:nth-of-type(6) {
+  width: 515px;
+  height: 24px;
+  margin: 20px 71px 81px 0;
+  font-family: Pretendard;
+  font-size: 20px;
+  font-weight: bold;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.6;
+  letter-spacing: normal;
+  text-align: left;
+  color: #333;
+}
+
+.img-text__text .NEXUSGAS- {
+  width: 179px;
+  height: 24px;
+  margin: 81px 407px 0 0;
+  font-family: Pretendard;
+  font-size: 20px;
+  font-weight: bold;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.6;
+  letter-spacing: normal;
+  text-align: left;
+  color: #333;
+}
+
+.input-text.invalid,
+.textarea.invalid {
+  border-color: #ff4444;
+  background-color: #fff5f5;
+}
+
+.error-message {
+  color: #ff4444 !important;
+  font-size: 0.8vw !important;
+  margin-top: 8px !important; /* 정확히 8px */
+  margin-bottom: 13px !important; /* 정확히 13px */
+  display: none !important;
+  position: relative !important;
+  left: auto !important;
+  top: auto !important;
+}
+
+.error-message.show {
+  display: block !important;
+}
+
+/* 입력 필드 간격 조정 */
+.form-default__row {
+  margin-bottom: 0.5vw !important; /* 8px */
+}
+
+.form-default__row:last-child {
+  margin-bottom: 0 !important;
+}
+
+/* 폼 입력 컨테이너 스타일 */
+.form-default__input {
+  display: flex !important;
+  flex-direction: column !important;
+  align-items: flex-start !important;
+}
+
+/* 에러 메시지가 입력 필드 아래에 오도록 */
+.form-default__input .error-message {
+  order: 2 !important;
+  width: 100% !important;
+  text-align: left !important;
+}
+
+/* 기존 absolute 포지션 덮어쓰기 */
+.form-default__input.invalid .error-message {
+  position: relative !important;
+  bottom: auto !important;
+  left: auto !important;
+  font-size: 0.8vw !important;
+  color: #ff4444 !important;
+  margin-top: 8px !important; /* 정확히 8px */
+  margin-bottom: 13px !important; /* 정확히 13px */
+}
+
+.checkbox__input:disabled + .checkbox__label {
+  opacity: 0.5;
+  cursor: not-allowed;
+}
+
+.checkbox__input:disabled + .checkbox__label .checkbox__icon {
+  background-color: #f5f5f5;
+  border-color: #ddd;
+}
+
+/* 체크박스 v표시 */
+.checkbox__input:checked + .checkbox__label .checkbox__icon::after {
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 0.4vw;
+  height: 0.4vw;
+  background-color: #fff;
+  border-radius: 50%;
+}
+
+/* 라디오 버튼 v표시 */
+/* 라디오 버튼 선택 시 파란 점 제거 (기존 스타일 무효화) */
+.checkbox__input[type="radio"]:checked + .checkbox__label .checkbox__icon::after {
+  content: none !important;
+}
+
+/* 폼 필드 포커스 스타일 */
+.input-text:focus,
+.textarea:focus {
+  border-color: #2b65f6;
+  outline: none;
+  box-shadow: 0 0 0 2px rgba(43, 101, 246, 0.1);
+}
+
+/* 개인정보 처리방침 내용 스타일 */
+.faq-content__policy-inner {
+  line-height: 1.8;
+  color: #333;
+}
+
+.faq-content__policy-inner strong {
+  color: #111;
+  font-weight: 600;
+}
 .table-section__inner, .half-section__inner, .icon-section__inner, .badge-section__inner, .slide-section__inner, .info-card__inner, .news__inner, .contents-tab__inner, .btn-step__section .btn-step__inner, .ISO-section__inner, .awards-section__inner, .square-section__inner, .page-header__inner, .page-tab__inner, .page-title__inner, .content-section__inner, .content-section .trand__content, .image-gallery__inner, .intro-section__inner, .faq-content__inner, .history-list__inner, .submain-swiper__pagination {
   width: 100%;
   max-width: 79.1666666667vw;
