--- a/20250812/assets/css/page.css
+++ b/20250812/assets/css/page.css
@@ -2854,9 +2854,13 @@
   top: 0;
   left: 0;
   z-index: 1000;
+  display: none;
+  opacity: 0;
+  transition: opacity 0.3s ease;
 }
 .popup.is-active {
   display: block;
+  opacity: 1;
 }
 .popup__wrap {
   position: fixed;
